# Tokamake

./: .gitignore  AGENT.md  CMakeLists.txt  CONTRIBUTING.md  MILESTONE7_OUTPUT_SCHEMA.md  MILESTONE_CHECKLIST.md  Makefile  PHYSICS_MANIFEST.md  README.md  imgui.ini
baselines/m0/: BASELINE_SPEC.md
baselines/m0/reference/: checksums.sha256  magnetic_field_diagnostics_v2.csv  radial_profiles_v2.csv  solver_residuals_v2.csv  summary_v2.csv
benchmarks/: README.md  run_benchmark.sh
docs/: VIEWER_SETUP.md
include/tokamak/: artifact_export.hpp  collision.hpp  config.hpp  diagnostics.hpp  electrostatic_field.hpp  electrostatic_models.hpp  engine.hpp  magnetic_field.hpp  particle_push.hpp  particle_system.hpp  reactivity.hpp  spatial_grid.hpp  types.hpp
include/tokamak/viewer/: camera.hpp  gl_renderer.hpp  replay_loader.hpp  replay_manifest.hpp  replay_snapshot.hpp  viewer_app.hpp
legacy/: QUARANTINED.md  README.md
legacy/monolith/: tokamakfusion.cpp
legacy/monolith/include/: tokamak_engine.h
legacy/monolith/src/: tokamak_engine.cpp
legacy/shared/include/: math_types.h  sim_snapshot.h  snapshot_ring_buffer.h  snapshot_stream.h  tokamak_types.h
legacy/shared/include/render/: camera.h  particle_renderer.h  render_math.h  scene_renderer.h
legacy/shared/include/ui/: telemetry_panels.h
legacy/shared/src/: snapshot_stream.cpp
legacy/viewer/src/: viewer_main.cpp
legacy/viewer/src/render/: camera.cpp  particle_renderer.cpp  scene_renderer.cpp
legacy/viewer/src/ui/: telemetry_panels.cpp
scripts/: capture_baseline_m0.sh  run_debug.sh  run_full_system.sh  verify_baseline_m0.sh
src/: artifact_export.cpp  collision.cpp  electrostatic_field.cpp  electrostatic_models.cpp  engine.cpp  magnetic_field.cpp  main.cpp  particle_push.cpp  particle_system.cpp  reactivity.cpp  spatial_grid.cpp  telemetry.cpp
src/viewer/: camera.cpp  gl_renderer.cpp  main.cpp  replay_loader.cpp  replay_manifest.cpp  replay_snapshot.cpp  viewer_app.cpp
tests/: README.md  VALIDATION_MATRIX.md  engine_tests.cpp  integration_tests.cpp  milestone2_magnetic_field_tests.cpp  milestone3_electrostatic_field_tests.cpp  milestone6_validation_tests.cpp  particle_system_tests.cpp  reactivity_tests.cpp  run_validation.sh  validation_harness.hpp  viewer_replay_tests.cpp
